# sRNA-target-prediction-windows

./: .gitignore  LICENSE  PLAN.md  README.md  dist_readme.txt  pyproject.toml  srna-win-target-web.spec  srna-win-target.spec
LICENSES/: NOTICE.txt
bundled_tools/miranda/: README.txt
bundled_tools/pita/: README.txt  pita_prediction.pl  sort_wrapper.pl
bundled_tools/pita/lib/: RNAddG_compute.pl  add_column.pl  average_rows.pl  body.pl  cap.pl  cut.pl  extract_sequence.pl  fasta2stab.pl  find_potential_mirna_targets.pl  join.pl  libfile.pl  libstats.pl  libtable.pl  merge_columns.pl  modify_column.pl  pita_run.pl  stab2length.pl  tab2feature_gxt.pl  transpose.pl  uniquify.pl
bundled_tools/rnahybrid/: README.txt
docs/: architecture.md
examples/config/: windows-tools.example.toml
examples/input/: mirna.fa  targets.fa
scripts/: assemble_portable_zip.sh  build_real_goldens.sh  build_windows_exe.py  probe_server_tools.sh  srna_win_target_gui.py  srna_win_target_web.py
src/srna_win_target/: __init__.py
src/srna_win_target/backends/: __init__.py  base.py  local.py  wsl.py
src/srna_win_target/cli/: _selftest.py  app.py
src/srna_win_target/core/: __init__.py  models.py  (+1 more)
tests/: test_alignment_viz.py  test_backends.py  test_cli.py  test_fasta_split.py  test_format_check.py  test_gui.py  test_gui_e2e.py  test_manifest.py  test_merge.py  test_parser_miranda.py  test_parser_pita.py  test_parser_rnahybrid.py  test_parsers_real.py  test_pipeline_e2e.py  test_real_backend_integration.py  test_skeleton.py  test_streaming_writer.py  test_visualize.py  test_web.py
(+29 files in other folders)
