[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srna-win-target"
version = "0.1.0"
description = "Windows-friendly wrapper for traditional sRNA/miRNA target prediction tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pandas>=2.0",
  "biopython>=1.83",
  "tqdm>=4.66",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.30", "websockets>=12"]
plots = ["matplotlib>=3.8", "matplotlib-venn>=0.11", "upsetplot>=0.9"]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27"]
package = ["pyinstaller>=6"]

[project.scripts]
srna-win-target = "srna_win_target.cli.app:app"

[project.gui-scripts]
srna-win-target-gui = "srna_win_target.gui:launch_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
  "requires_tools: integration test that needs real miRanda/RNAhybrid/PITA binaries — auto-skipped if any are missing",
]
